# llm

./: .gitignore  build_log.txt  pubspec.yaml
.idx/: dev.nix
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_bindings.cpp  llama_bindings.h
android/app/src/main/cpp/build_arm64-v8a/: CMakeCache.txt
android/app/src/main/cpp/build_armeabi-v7a/: CMakeCache.txt
android/app/src/main/cpp/build_x86_64/: CMakeCache.txt
assets/: README.md
lib/: main.dart
lib/ffi/: llama_bindings.dart  llama_types.dart
lib/models/: chat_model.dart  llm_model.dart
lib/screens/: chat_screen.dart  info_screen.dart  models_screen.dart  settings_screen.dart
lib/services/: chat_storage.dart  llm_service.dart  model_manager.dart
lib/widgets/: chat_bubble.dart  navigation_drawer.dart
scripts/: build_android_libs.sh  setup_firebase_studio.sh
